--- a/jasypt-spring-boot-demo/src/main/resources/encrypted.properties
+++ b/jasypt-spring-boot-demo/src/main/resources/encrypted.properties
@@ -1,6 +1,6 @@
 secret.property=ENC(nrmZtkF7T0kjG/VodDvBw93Ct8EgjCA+)
 
-#jasypt.encryptor.password=password
+#Uncomment this properties and set the values you want to customize the StringEncryptor used in this app
 #jasypt.encryptor.algorithm=PBEWithMD5AndDES
 #jasypt.encryptor.keyObtentionIterations=1000
 #jasypt.encryptor.poolSize=1
