--- a/jasypt-spring-boot/pom.xml
+++ b/jasypt-spring-boot/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>com.ulisesbocchio</groupId>
     <artifactId>jasypt-spring-boot</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <java.version>1.8</java.version>
