--- a/jasypt-spring-boot-demo/pom.xml
+++ b/jasypt-spring-boot-demo/pom.xml
@@ -24,11 +24,17 @@
 	</properties>
 
 	<dependencies>
-        <dependency>
-            <groupId>com.ulisesbocchio</groupId>
-            <artifactId>jasypt-spring-boot-starter</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+		<!-- Uncomment this if not using jasypt-spring-boot-starter -->
+        <!--<dependency>-->
+            <!--<groupId>com.ulisesbocchio</groupId>-->
+            <!--<artifactId>jasypt-spring-boot</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
+		<dependency>
+			<groupId>com.ulisesbocchio</groupId>
+			<artifactId>jasypt-spring-boot-starter</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
