--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,5 @@ notifications:
     on_success: always  # options: [always|never|change] default: always
     on_failure: always  # options: [always|never|change] default: always
     on_start: false     # default: false
+after_success:
+  - coveralls
