--- a/jasypt-spring-boot-demo/pom.xml
+++ b/jasypt-spring-boot-demo/pom.xml
@@ -25,15 +25,20 @@
 
 	<dependencies>
 		<!-- Uncomment this if not using jasypt-spring-boot-starter -->
-        <!--<dependency>-->
-            <!--<groupId>com.ulisesbocchio</groupId>-->
-            <!--<artifactId>jasypt-spring-boot</artifactId>-->
-            <!--<version>1.0-SNAPSHOT</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>com.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.ulisesbocchio</groupId>-->
+			<!--<artifactId>jasypt-spring-boot-starter</artifactId>-->
+			<!--<version>1.0-SNAPSHOT</version>-->
+		<!--</dependency>-->
 		<dependency>
-			<groupId>com.ulisesbocchio</groupId>
-			<artifactId>jasypt-spring-boot-starter</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
