--- a/jasypt-spring-boot-demo-tomcat-ssl/pom.xml
+++ b/jasypt-spring-boot-demo-tomcat-ssl/pom.xml
@@ -3,13 +3,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.ulisesbocchio</groupId>
+        <groupId>com.github.ulisesbocchio</groupId>
         <artifactId>jasypt-spring-boot-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>jasypt-spring-boot-demo-tomcat-ssl</artifactId>
-    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -18,7 +17,7 @@
 
 	<dependencies>
         <dependency>
-            <groupId>com.ulisesbocchio</groupId>
+            <groupId>com.github.ulisesbocchio</groupId>
             <artifactId>jasypt-spring-boot</artifactId>
         </dependency>
 		<dependency>
