--- a/jasypt-spring-boot-demo/pom.xml
+++ b/jasypt-spring-boot-demo/pom.xml
@@ -4,13 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.ulisesbocchio</groupId>
+        <groupId>com.github.ulisesbocchio</groupId>
         <artifactId>jasypt-spring-boot-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>jasypt-spring-boot-demo</artifactId>
-    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
 	<properties>
@@ -20,14 +19,12 @@
 	<dependencies>
 		<!-- Uncomment this if not using jasypt-spring-boot-starter -->
         <dependency>
-            <groupId>com.ulisesbocchio</groupId>
+            <groupId>com.github.ulisesbocchio</groupId>
             <artifactId>jasypt-spring-boot</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
 		<!--<dependency>-->
-			<!--<groupId>com.ulisesbocchio</groupId>-->
+			<!--<groupId>com.github.ulisesbocchio</groupId>-->
 			<!--<artifactId>jasypt-spring-boot-starter</artifactId>-->
-			<!--<version>1.0-SNAPSHOT</version>-->
 		<!--</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
