--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,4 @@ notifications:
     on_start: false     # default: false
 after_success:
   - coveralls
+install: mvn install -DskipTests=true -Dgpg.skip=true
