[maven-release-plugin] prepare release jasypt-spring-boot-parent-1.4

--- a/jasypt-spring-boot-starter/pom.xml
+++ b/jasypt-spring-boot-starter/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.github.ulisesbocchio</groupId>
         <artifactId>jasypt-spring-boot-parent</artifactId>
-        <version>1.4-SNAPSHOT</version>
+        <version>1.4</version>
     </parent>
 
     <artifactId>jasypt-spring-boot-starter</artifactId>
