--- a/jasypt-spring-boot-demo-tomcat-ssl/pom.xml
+++ b/jasypt-spring-boot-demo-tomcat-ssl/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.github.ulisesbocchio</groupId>
         <artifactId>jasypt-spring-boot-parent</artifactId>
-        <version>1.4</version>
+        <version>1.5-SNAPSHOT</version>
     </parent>
 
     <artifactId>jasypt-spring-boot-demo-tomcat-ssl</artifactId>
