--- a/jasypt-spring-boot-demo/pom.xml
+++ b/jasypt-spring-boot-demo/pom.xml
@@ -15,17 +15,28 @@
 
 	<properties>
 		<start-class>demo.DemoApplication</start-class>
+		<java.version>1.8</java.version>
 	</properties>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
+
+
 	<dependencies>
-		<!-- Uncomment this if not using jasypt-spring-boot-starter -->
-        <dependency>
-            <groupId>com.github.ulisesbocchio</groupId>
-            <artifactId>jasypt-spring-boot</artifactId>
-        </dependency>
+		<dependency>
+			<groupId>com.github.ulisesbocchio</groupId>
+			<artifactId>jasypt-spring-boot</artifactId>
+		</dependency>
+		<!-- Uncomment this if using jasypt-spring-boot-starter -->
 		<!--<dependency>-->
-			<!--<groupId>com.github.ulisesbocchio</groupId>-->
-			<!--<artifactId>jasypt-spring-boot-starter</artifactId>-->
+		<!--<groupId>com.github.ulisesbocchio</groupId>-->
+		<!--<artifactId>jasypt-spring-boot-starter</artifactId>-->
 		<!--</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -42,14 +53,5 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
 
 </project>
