--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <spring.security.version>4.0.3.RELEASE</spring.security.version>
         <jasypt.version>1.9.2</jasypt.version>
         <maven.compiler.version>3.3</maven.compiler.version>
+        <start-class>Application</start-class>
     </properties>
 
     <modules>
@@ -106,6 +107,16 @@
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <version>${spring.boot.version}</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>repackage</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <mainClass>${start-class}</mainClass>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
