added more demo projects

--- a/jasypt-spring-boot-demo-simple-starter/src/main/resources/application.yml
+++ b/jasypt-spring-boot-demo-simple-starter/src/main/resources/application.yml
@@ -2,3 +2,6 @@ jasypt:
     encryptor:
         bean: encryptorBean
         password: ${JASYPT_ENCRYPTOR_PASSWORD:}
+
+secret2:
+    property: ENC(nrmZtkF7T0kjG/VodDvBw93Ct8EgjCA+)
