--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
         <module>jasypt-spring-boot-demo</module>
         <module>jasypt-spring-boot-demo-tomcat-ssl</module>
         <module>jasypt-spring-boot-demo-simple</module>
+        <module>jasypt-spring-boot-demo-simple-starter</module>
+        <module>jasypt-spring-boot-demo-custom-encryptor</module>
     </modules>
 
     <issueManagement>
