--- a/jasypt-spring-boot-demo-simple/pom.xml
+++ b/jasypt-spring-boot-demo-simple/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.github.ulisesbocchio</groupId>
         <artifactId>jasypt-spring-boot-parent</artifactId>
-        <version>1.7</version>
+        <version>1.8-SNAPSHOT</version>
     </parent>
 
     <artifactId>jasypt-spring-boot-demo-simple</artifactId>
