--- a/jasypt-spring-boot-demo-tomcat-ssl/pom.xml
+++ b/jasypt-spring-boot-demo-tomcat-ssl/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.github.ulisesbocchio</groupId>
         <artifactId>jasypt-spring-boot-parent</artifactId>
-        <version>1.5-java7-SNAPSHOT</version>
+        <version>1.5-java6-SNAPSHOT</version>
     </parent>
 
     <artifactId>jasypt-spring-boot-demo-tomcat-ssl</artifactId>
@@ -15,6 +15,7 @@
 
     <properties>
         <start-class>sample.tomcat.SampleTomcatSslApplication</start-class>
+        <tomcat.version>7.0.59</tomcat.version>
 	</properties>
 
 	<dependencies>
