--- a/jasypt-spring-boot/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/jasypt-spring-boot/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -4,6 +4,12 @@
             "name": "jasypt.encryptor",
             "type": "com.ulisesbocchio.jasyptspringboot.properties.JasyptEncryptorConfigurationProperties",
             "sourceType": "com.ulisesbocchio.jasyptspringboot.properties.JasyptEncryptorConfigurationProperties"
+        },
+        {
+            "name": "jasypt.encryptor.property",
+            "type": "com.ulisesbocchio.jasyptspringboot.properties.JasyptEncryptorConfigurationProperties$PropertyConfigurationProperties",
+            "sourceType": "com.ulisesbocchio.jasyptspringboot.properties.JasyptEncryptorConfigurationProperties$PropertyConfigurationProperties"
+
         }
     ],
     "properties": [
@@ -45,7 +51,7 @@
             "name": "jasypt.encryptor.proxyPropertySources",
             "type": "java.lang.Boolean",
             "description": "Whether to use JDK/Cglib (depending on classpath availability) proxy with an AOP advice as a decorator for existing {@link org.springframework.core.env.PropertySource}\n or just simply use targeted wrapper Classes.\n Default Value is {@code false}.",
-            "sourceType": "com.ulisesbocchio.jasyptspringboot.properties.EncryptablePropertySourcesConfigurationProperties",
+            "sourceType": "com.ulisesbocchio.jasyptspringboot.properties.JasyptEncryptorConfigurationProperties",
             "defaultValue": false
         },
         {
@@ -66,8 +72,36 @@
             "name": "jasypt.encryptor.bean",
             "type": "java.lang.String",
             "description": "Specify the name of bean to override jasypt-spring-boot's default properties based {@link org.jasypt.encryption.StringEncryptor}.\n Default Value is {@code \"jasyptStringEncryptor\"}.",
-            "sourceType": "com.ulisesbocchio.jasyptspringboot.properties.EncryptablePropertySourcesConfigurationProperties",
+            "sourceType": "com.ulisesbocchio.jasyptspringboot.properties.JasyptEncryptorConfigurationProperties",
             "defaultValue": "jasyptStringEncryptor"
+        },
+        {
+          "name": "jasypt.encryptor.property.detector-bean",
+          "type": "java.lang.String",
+          "description": "Specify the name of the bean to be provided for a custom {@link com.ulisesbocchio.jasyptspringboot.EncryptablePropertyDetector}.\n Default value is {@code \"encryptablePropertyDetector\"}",
+          "sourceType": "com.ulisesbocchio.jasyptspringboot.properties.JasyptEncryptorConfigurationProperties$PropertyConfigurationProperties",
+          "defaultValue": "encryptablePropertyDetector"
+        },
+        {
+          "name": "jasypt.encryptor.property.resolver-bean",
+          "type": "java.lang.String",
+          "description": "Specify the name of the bean to be provided for a custom {@link com.ulisesbocchio.jasyptspringboot.EncryptablePropertyResolver}.\n Default value is {@code \"encryptablePropertyResolver\"}",
+          "sourceType": "com.ulisesbocchio.jasyptspringboot.properties.JasyptEncryptorConfigurationProperties$PropertyConfigurationProperties",
+          "defaultValue": "encryptablePropertyResolver"
+        },
+        {
+          "name": "jasypt.encryptor.property.prefix",
+          "type": "java.lang.String",
+          "description": "Specify a custom {@link String} to identify as prefix of encrypted properties.\n Default value is {@code \"ENC(\"}",
+          "sourceType": "com.ulisesbocchio.jasyptspringboot.properties.JasyptEncryptorConfigurationProperties$PropertyConfigurationProperties",
+          "defaultValue": "ENC("
+        },
+      {
+        "name": "jasypt.encryptor.property.suffix",
+        "type": "java.lang.String",
+          "description": "Specify a custom {@link String} to identify as suffix of encrypted properties.\n Default value is {@code \")\"}",
+          "sourceType": "com.ulisesbocchio.jasyptspringboot.properties.JasyptEncryptorConfigurationProperties$PropertyConfigurationProperties",
+          "defaultValue": ")"
         }
     ]
 }
