--- a/jasypt-spring-boot-demo/src/main/resources/encrypted.properties
+++ b/jasypt-spring-boot-demo/src/main/resources/encrypted.properties
@@ -4,6 +4,6 @@ secret.property=ENC(nrmZtkF7T0kjG/VodDvBw93Ct8EgjCA+)
 #jasypt.encryptor.algorithm=PBEWithMD5AndDES
 #jasypt.encryptor.keyObtentionIterations=1000
 #jasypt.encryptor.poolSize=1
-#jasypt.encryptor.providerName=SunJCE
+#jasypt.encryptor.providerName= #default JVM provider will be used
 #jasypt.encryptor.saltGeneratorClassname=org.jasypt.salt.RandomSaltGenerator
 #jasypt.encryptor.stringOutputType=base64
