--- a/jasypt-spring-boot-demo/pom.xml
+++ b/jasypt-spring-boot-demo/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.github.ulisesbocchio</groupId>
         <artifactId>jasypt-spring-boot-parent</artifactId>
-        <version>1.5-java7-SNAPSHOT</version>
+        <version>1.5-java7</version>
     </parent>
 
     <artifactId>jasypt-spring-boot-demo</artifactId>
