--- a/jasypt-spring-boot/pom.xml
+++ b/jasypt-spring-boot/pom.xml
@@ -15,7 +15,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.melloware</groupId>
+            <groupId>org.jasypt</groupId>
             <artifactId>jasypt</artifactId>
         </dependency>
         <dependency>
