#156 allows unresolvable properties from env actuator

--- a/jasypt-spring-boot-starter/src/test/resources/bootstrap.properties
+++ b/jasypt-spring-boot-starter/src/test/resources/bootstrap.properties
@@ -9,3 +9,5 @@ jasypt.encryptor.password=passphrase
 jasypt.encryptor.ivGeneratorClassname=org.jasypt.iv.RandomIvGenerator
 
 spring.profiles.active=subversion
+
+management.endpoints.web.exposure.include=*
