various improvements on Spring 2.5.4

--- a/jasypt-spring-boot-starter/src/test/resources/bootstrap.properties
+++ b/jasypt-spring-boot-starter/src/test/resources/bootstrap.properties
@@ -1,4 +1,4 @@
-#spring.cloud.config.server.bootstrap=true
+spring.cloud.config.server.bootstrap=true
 spring.application.name=config-server
 
 spring.cloud.config.server.svn.username=myusername
@@ -11,3 +11,4 @@ jasypt.encryptor.ivGeneratorClassname=org.jasypt.iv.RandomIvGenerator
 spring.profiles.active=subversion
 
 management.endpoints.web.exposure.include=*
+logging.level.org.springframework.boot.autoconfigure=ERROR
